--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,10 @@ repositories {
 }
 
 dependencies {
+    implementation ('ch.qos.logback:logback-classic:1.4.12')
+    implementation ('org.slf4j:slf4j-api:1.7.32')
     testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation ('org.junit.jupiter:junit-jupiter')
 }
 
 test {
