--- a/build.gradle
+++ b/build.gradle
@@ -19,3 +19,14 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+tasks.register('fatJar', Jar) {
+    manifest {
+        attributes(
+                'Main-Class': 'codesquad.Main'
+        )
+    }
+    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    with jar
+}
